# NavigationTutorial

./: .gitignore  readme.md
src/custom_navigatio/astar/param/: global_planner_params.yaml
src/custom_navigatio/astar/src/: astar_planner.cpp
src/custom_navigatio/dwa/param/: local_planner_params.yaml
src/custom_navigatio/dwa/src/: dwa_planner.cpp
src/custom_navigation/cilqr/: CMakeLists.txt  custom_cilqr_plugin.xml  package.xml
src/custom_navigation/cilqr/include/cilqr/: cilqr_planner.cpp  cilqr_planner.h
src/custom_navigation/cilqr/param/: local_planner_params.yaml
src/custom_navigation/ilqr/: CMakeLists.txt  package.xml
src/custom_navigation/ilqr/include/ilqr/: Constraints.cpp  Constraints.h  Obstacle.cpp  Obstacle.h  Parameters.cpp  Parameters.h  iLQR.cpp  iLQR.h
src/custom_navigation/ilqr/launch/: AvoidObstacle.launch
src/custom_navigation/ilqr/msg/: VehicleArray.msg
src/custom_navigation/ilqr/src/: main.cpp  vehicle_pub.cpp
src/ilqr_ws/ilqr/: CMakeLists.txt  package.xml
src/ilqr_ws/ilqr/src/: batch_dataprocess_revise.py  main.cpp
src/ilqr_ws/map_engine/: CMakeLists.txt  CMakeLists_change.txt  CMakeLists_origin.txt  CMakeLists_short.txt
src/ilqr_ws/nmpc/: CMakeLists.txt  changelog.md  package.xml
src/ilqr_ws/nmpc/launch/: Experiment.launch
src/ilqr_ws/nmpc/msg/: Vehicle.msg
src/ilqr_ws/nmpc/src/: batch_dataprocess.py  dataprocess.py  main.py  nmpc_all.py  params.py
src/ilqr_ws/nmpc/temp/: experiment.cpp  main copy.py  main.cpp  main_experiment.cpp  nmpc_.py  nmpc_change.py  vehicle_pub.cpp
src/ilqr_ws/vehiclepub/: CMakeLists.txt
src/nav_pack/: CMakeLists.txt  package.xml
src/nav_pack/config/: show.rviz
src/nav_pack/launch/: nav_load_map.launch  nav_main.launch  nav_params_slam.launch  nav_path.launch  nav_save_map.launch  nav_show_car.launch
src/nav_pack/map/: nav.pgm  nav.yaml
src/nav_pack/urdf/: car.urdf.xacro  car_base.urdf.xacro
src/nav_pack/urdf/gazebo/: kinect.urdf.xacro
src/nav_pack/worlds/: box_house.world
test/: readme.md  test.cpp
test/test_cu/: CMakeCache.txt  CMakeLists.txt  Makefile  MyProject
test/test_cu/src/: kernel.cu  main.cpp
test/test_cu_mp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cuda_openmp_prj  main.cpp  myutil.cu  myutil.h
